Officer ViewReplies - able to view replied and unreplied msg - ignoreCase